package org.example;

public class Main {
    public static void main(String[] args) {
        ECommerceSystem system = new ECommerceSystem();
        system.run();
    }
}